@@ -5,12 +5,14 @@ NEW FEATURES
 (raf) TextUI: Msgbox now goes away after 3sec (not based on frames rendered anymore, but time).
 (raf) Core: (Supported by TextUI) Framerate configuration file is now set globally in PSPRadio.cfg (PLUGINS:DISPLAY_FPS)
 (raf) TextUI: Now uses GU more; which reduces flickering and improves framerate. 
+(raf) TextUI: Cleaned up the way stream time and info is displayed while on fullscreen visualization mode.
 BUG FIXES
 (raf) Core: PSPRadio would crash on startup if the visualizer plugin was disabled.
 (raf) Core: PSPRadio would crash on startup if the SHOUTcast database (newdb.xml) file was empty.
 (raf) TextUI: Corrected problem where PSPRadio would crash when downloading the SHOUTcast database. (The problem was caused by lack of complete support for values -1 and -2 in the configuration files after the TextUI rendering changes.
 (raf) TextUI: Corrected problem that caused a crash when switching from TextUI3d to TextUI.
 (raf) Core: Corrected problem that caused a crash on restore from suspend mode when the wifi was enabled. Now it will also resume play.
+(raf) Core: Disabled UI rendering while shutting down; this makes sure the "shutting down" screen is not drawn over.
 KNOWN BUGS
 (raf) TextUI: When switching skins all the text will disappear. This happens on occasion.
 (raf) TextUI: GU is not initialized correctly, causing a crash when switching from TextUI3d to TextUI.
